--- a/src/components/Style.css
+++ b/src/components/Style.css
@@ -1,21 +1,16 @@
-/* * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  text-decoration: none;
-  outline: none;
-  list-style: none;
-  font-size: 30px;
-} */
+.main_container {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
 .container {
-  width: 380px;
-  /*
-	background: rgb(33,41,92);
-background: linear-gradient(90deg, rgba(33,41,92,1) 0%, rgba(6,90,130,1) 50%, rgba(33,41,92,1) 100%);
-	*/
+  width: 50%;
+  display: flex;
+  flex-direction: column;
   background-color: #fff;
-  box-shadow: 0 15px 20px rgba(0, 0, 0, 0.2);
-  border-radius: 15px 15px 0 0;
+  margin: 13px 30px;
   padding-bottom: 50px;
 }
 
@@ -46,12 +41,19 @@ background: linear-gradient(90deg, rgba(33,41,92,1) 0%, rgba(6,90,130,1) 50%, rg
   margin-top: 20px;
 }
 
-.container form .field input,
-.container form .field button {
+.container form .field input {
   width: 100%;
   height: 100%;
-  border-radius: 25px;
+  border-radius: 5px;
   outline: none;
+}
+.container form .field button {
+  width: 30%;
+  height: 100%;
+  border-radius: 5px;
+  outline: none;
+  margin: "50px auto";
+  float: right;
 }
 
 .container form .field button {
@@ -117,6 +119,68 @@ background: linear-gradient(90deg, rgba(33,41,92,1) 0%, rgba(6,90,130,1) 50%, rg
 
 .container form .field button:active,
 .container form .field button:hover {
+  transform: scale(0.95);
+  background: rgb(63, 0, 77);
+  background: linear-gradient(
+    90deg,
+    rgba(63, 0, 77, 1) 0%,
+    rgba(27, 59, 111, 1) 50%,
+    rgba(63, 0, 77, 1) 100%
+  );
+  font-size: 19px;
+}
+
+.list {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  justify-content: space-between;
+  border-bottom: 3px solid grey;
+}
+.list-heading {
+  margin: 1% 5%;
+  font-size: 24px;
+  font-weight: 700 !important;
+  padding: 21px;
+}
+.list-content {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  justify-content: space-between;
+  margin: 10px auto;
+}
+.list-content:hover {
+  background-color: rgb(223 218 218);
+}
+.content {
+  margin: 1% 5%;
+  font-size: 20px;
+  font-weight: 500 !important;
+  /* padding: 21px; */
+}
+.list-main {
+  display: flex;
+  flex-direction: column;
+}
+.Buttons {
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-top: 6px;
+  padding-bottom: 5px;
+  color: #fff;
+  background-color: #b5179e;
+  font-size: 18px;
+  font-weight: 500;
+  padding-left: 0;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  width: 100%;
+  height: 100%;
+  border-radius: 5px;
+  outline: none;
+}
+.Buttons:hover {
   transform: scale(0.95);
   background: rgb(63, 0, 77);
   background: linear-gradient(
