--- a/src/components/Style.css
+++ b/src/components/Style.css
@@ -13,6 +13,11 @@
   margin: 13px 30px;
   padding-bottom: 50px;
 }
+.box {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  transition: 0.3s;
+  border-radius: 30px;
+}
 
 .container .header {
   color: #fff;
@@ -145,7 +150,7 @@
 }
 .list-content {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   width: 100%;
   justify-content: space-between;
   margin: 10px auto;
@@ -190,4 +195,11 @@
     rgba(63, 0, 77, 1) 100%
   );
   font-size: 19px;
+}
+.list-content-row {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  justify-content: space-between;
+  margin: 10px auto;
 }
