--- a/src/components/Style.css
+++ b/src/components/Style.css
@@ -13,11 +13,11 @@
   margin: 13px 30px;
   padding-bottom: 50px;
 }
-.box {
+/* .box {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   transition: 0.3s;
   border-radius: 30px;
-}
+} */
 
 .container .header {
   color: #fff;
@@ -155,9 +155,7 @@
   justify-content: space-between;
   margin: 10px auto;
 }
-.list-content:hover {
-  background-color: rgb(223 218 218);
-}
+
 .content {
   margin: 1% 5%;
   font-size: 20px;
@@ -202,4 +200,32 @@
   width: 100%;
   justify-content: space-between;
   margin: 10px auto;
+}
+.input-grey-rounded {
+  font-size: 16px;
+  line-height: 1.5;
+  background: #e9eef0;
+  border: 1px solid #d5d9db;
+  background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='16' height='16' viewBox='0 0 16 16'><path fill='%238C92A0' d='M11.44 10.73l4.41 4.42a.5.5 0 1 1-.7.7l-4.42-4.41a6.5 6.5 0 1 1 .7-.7v-.01zM6.5 12a5.5 5.5 0 1 0 0-11 5.5 5.5 0 0 0 0 11z'></path></svg>");
+  background-repeat: no-repeat;
+  background-position: 15px 10px;
+  background-size: 20px 20px;
+  border-radius: 100px;
+  /* width: 300px; */
+  padding: 0.5em 1em 0.5em 2.5em;
+}
+
+.input-grey-rounded::placeholder {
+  color: #838d99;
+}
+
+.input-grey-rounded:focus {
+  outline: none;
+  background-color: #fff;
+  border: 1px solid #84a2fa;
+}
+.input-div {
+  display: flex;
+  flex-direction: row;
+  justify-content: right;
 }
