--- a/src/components/Style.css
+++ b/src/components/Style.css
@@ -1,5 +1,5 @@
 .main_container {
-  width: 100%;
+  /* width: 100%; */
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -146,7 +146,9 @@
   margin: 1% 5%;
   font-size: 24px;
   font-weight: 700 !important;
-  padding: 21px;
+  /* padding: 21px; */
+  margin-top: 33px;
+  padding-bottom: 30px;
 }
 .list-content {
   display: flex;
