--- a/src/components/Style.css
+++ b/src/components/Style.css
@@ -6,32 +6,35 @@
 }
 
 .container {
-  width: 50%;
+  width: 60%;
   display: flex;
   flex-direction: column;
   background-color: #fff;
   margin: 13px 30px;
   padding-bottom: 50px;
 }
-/* .box {
+.box {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   transition: 0.3s;
   border-radius: 30px;
-} */
+  max-height: 436px;
+  min-height: 430px;
+  width: 40%;
+}
 
 .container .header {
-  color: #fff;
+  color: rgb(63, 0, 77);
   font-size: 35px;
   font-weight: 600px;
   text-align: center;
   line-height: 100px;
-  background: rgb(63, 0, 77);
+  /* background: rgb(63, 0, 77);
   background: linear-gradient(
     90deg,
     rgba(63, 0, 77, 1) 0%,
     rgba(27, 59, 111, 1) 50%,
     rgba(63, 0, 77, 1) 100%
-  );
+  ); */
   border-radius: 12px 12px 0 0;
 }
 
