--- a/src/components/Style.css
+++ b/src/components/Style.css
@@ -1,12 +1,13 @@
 .main_container {
-  /* width: 100%; */
+  width: 60%;
   display: flex;
-  flex-direction: row;
+  /* flex-direction: row; */
+  flex-direction: column;
   justify-content: center;
 }
 
 .container {
-  width: 60%;
+  /* width: 60%; */
   display: flex;
   flex-direction: column;
   background-color: #fff;
@@ -17,9 +18,9 @@
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   transition: 0.3s;
   border-radius: 30px;
-  max-height: 436px;
-  min-height: 430px;
-  width: 40%;
+  max-height: 600px;
+  /* min-height: 430px; */
+  /* width: 40%; */
 }
 
 .container .header {
@@ -138,6 +139,45 @@
   font-size: 19px;
 }
 
+.parent-input {
+  display: flex;
+  flex-direction: row;
+}
+.file-content {
+  margin-left: 30px;
+  font-family: monospace;
+}
+.file-input {
+  position: relative;
+  padding: 40px;
+  width: 40%;
+  /* box-shadow: 0 4px 8px 0 rgb(0 0 0 / 20%); */
+  background-color: #f9fcff;
+  border-radius: 17px;
+  position: relative;
+  height: 90px;
+  margin-top: 20px;
+}
+.file-input input {
+  border: none;
+  padding-left: 15px;
+  font-size: 17px;
+  width: 100%;
+  height: 100%;
+  border-radius: 5px;
+  outline: none;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  opacity: 0;
+}
+.upload-icon {
+  font-size: 51px;
+  /* align-items: center; */
+  text-align: center;
+  display: inline-block;
+  width: 100%;
+}
 .list {
   display: flex;
   flex-direction: row;
